syntax = "proto3";

//package = service;
option go_package = "grpc-base/protos";

// 请求参数
message EchoRequest{
  string Req = 1;
}

//返回参数化
message EchoResponse{
  string Res = 1;
}

service EchoService{
  rpc GetUnaryEcho (EchoRequest) returns (EchoResponse);
}

//protoc --go_out=../protos --go_opt=paths=source_relative --go-grpc_out=../protos --go-grpc_opt=paths=source_relative echo.proto

